@@ -2,10 +2,12 @@ package com.rockbite.tools.talos.editor.widgets.ui;
 
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.Input;
+import com.badlogic.gdx.files.FileHandle;
 import com.badlogic.gdx.scenes.scene2d.InputEvent;
 import com.badlogic.gdx.scenes.scene2d.InputListener;
 import com.badlogic.gdx.scenes.scene2d.ui.Table;
 import com.badlogic.gdx.scenes.scene2d.utils.ClickListener;
+import com.badlogic.gdx.utils.Array;
 import com.kotcrab.vis.ui.util.dialog.Dialogs;
 import com.kotcrab.vis.ui.widget.*;
 import com.rockbite.tools.talos.TalosMain;
@@ -24,6 +26,7 @@ public class MainMenu extends Table {
     private MenuItem createModule;
     private MenuItem groupSelectedModules;
     private MenuItem ungroupSelectedModules;
+    private PopupMenu openRecentPopup;
 
     public MainMenu(UIStage stage) {
         this.stage = stage;
@@ -67,10 +70,14 @@ public class MainMenu extends Table {
 
         final MenuItem newProject = new MenuItem("New TalosProject");
         final MenuItem openProject = new MenuItem("Open TalosProject");
+        MenuItem openRecent = new MenuItem("Open Recent");
         saveProject = new MenuItem("Save");
         export = new MenuItem("Export");
         exportAs = new MenuItem("Export As");
         MenuItem examples = new MenuItem("Examples");
+
+        openRecentPopup = new PopupMenu();
+        openRecent.setSubMenu(openRecentPopup);
 
         MenuItem legacy = new MenuItem("Legacy");
         PopupMenu legacyPopup = new PopupMenu();
@@ -90,6 +97,7 @@ public class MainMenu extends Table {
 
         projectMenu.addItem(newProject);
         projectMenu.addItem(openProject);
+        projectMenu.addItem(openRecent);
         projectMenu.addItem(saveProject);
         projectMenu.addItem(saveAsProject);
         projectMenu.addItem(export);
@@ -236,6 +244,8 @@ public class MainMenu extends Table {
                 return super.keyDown(event, keycode);
             }
         });
+
+        TalosMain.Instance().ProjectController().updateRecentsList();
     }
 
     public void disableTalosSpecific() {
@@ -258,5 +268,29 @@ public class MainMenu extends Table {
         enableItem(createModule);
         enableItem(groupSelectedModules);
         enableItem(ungroupSelectedModules);
+    }
+
+    public void updateRecentsList(Array<String> list) {
+        openRecentPopup.clear();
+
+        for(String path: list) {
+            final FileHandle handle = Gdx.files.absolute(path);
+            if(!handle.exists()) continue;;
+            String name = handle.name();
+            MenuItem item = new MenuItem(name);
+            item.addListener(new ClickListener() {
+                @Override
+                public void clicked(InputEvent event, float x, float y) {
+                    super.clicked(event, x, y);
+                    if(handle.extension().equals("tls")) {
+                        TalosMain.Instance().ProjectController().setProject(ProjectController.TLS);
+                        TalosMain.Instance().ProjectController().loadProject(handle);
+                    } else {
+                        TalosMain.Instance().Addons().projectFileDrop(handle);
+                    }
+                }
+            });
+            openRecentPopup.addItem(item);
+        }
     }
 }
